// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`android TitleView should render correctly with leading icon 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginEnd": 4,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
        ],
      ]
    }
  >
    
  </Text>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
          },
          Object {
            "lineHeight": 24,
          },
        ],
      ]
    }
  >
    Checkout
  </Text>
</View>
`;

exports[`android TitleView should render correctly with only a title 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
          },
          null,
        ],
      ]
    }
  >
    Backpack
  </Text>
</View>
`;

exports[`android TitleView should render correctly with trailing icon 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    numberOfLines={1}
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "sans-serif",
          "fontSize": 20,
          "fontWeight": "400",
        },
        Object {
          "fontFamily": "sans-serif-medium",
        },
        Array [
          Object {
            "color": "rgb(255, 255, 255)",
          },
          Object {
            "lineHeight": 24,
          },
        ],
      ]
    }
  >
    Checkout
  </Text>
  <Text
    accessible={true}
    allowFontScaling={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "rgb(82, 76, 97)",
          "fontFamily": "BpkIcon",
          "fontSize": 24,
          "includeFontPadding": false,
        },
        Object {
          "fontSize": 16,
        },
        Array [
          Object {
            "marginStart": 4,
          },
          Object {
            "color": "rgb(255, 255, 255)",
          },
        ],
      ]
    }
  >
    
  </Text>
</View>
`;
